prevent jumping page

--- a/htdocs/t/bar/bar.css
+++ b/htdocs/t/bar/bar.css
@@ -24,7 +24,7 @@
 #main-column .info .block .head { height: 31px; padding: 0 10px; line-height: 28px; color: #fff; background: #222 url(block-title-v.png) repeat-x scroll 0 0; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
 #main-column .info .block .body { padding: 0 10px; }
 
-#main-column .info .hit .cocktail-preview { width: 200px; margin: 0 auto; }
+#main-column .info .hit .cocktail-preview { width: 200px; min-height: 390px; margin: 0 auto; }
 #main-column .info .hit .cocktail-preview .link { display: block; text-align: center; }
 #main-column .info .hit .cocktail-preview .link .image { display: block; }
 
